--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/main.css" />
 
     <!-- Window icon and page name  -->
-    <link rel="icon" href="/images/62.jpeg" />
+    <link rel="icon" href="images/62.jpeg" />
     <title>Velkommen til Edge Herregård!</title>
   </head>
 
@@ -22,7 +22,7 @@
 
     <div class="topnav">
       <a href="Index.html"
-        ><img class="logo" src="/images/62.jpeg" alt="Logo"
+        ><img class="logo" src="images/62.jpeg" alt="Logo"
       /></a>
       <a href="booking.html" class="active">Booking</a>
       <a href="menu.html" class="hover">Meny</a>
@@ -109,7 +109,7 @@
         </div>
         <div class="individual-boxes">
           <p class="fotter-main-text">Edge Herregård A/S</p>
-          <img src="/images/62.jpeg" alt="62 Logo" />
+          <img src="images/62.jpeg" alt="62 Logo" />
           <address>
             Edgeøya, <br />
             9170 Svalbard, Norge
